[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "mistral"
description = "Mistral Project"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "Apache-2.0"}
dynamic = ["version", "dependencies"]
requires-python = ">=3.10"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://docs.openstack.org/mistral/latest/"
"Bug Tracker" = "https://bugs.launchpad.net/mistral/"
"Source Code" = "https://opendev.org/openstack/mistral"

[project.scripts]
mistral-server = "mistral.cmd.launch:main"
mistral-db-manage = "mistral.db.sqlalchemy.migration.cli:main"

[project.entry-points."mistral.rpc.backends"]
oslo_client = "mistral.rpc.oslo.oslo_client:OsloRPCClient"
oslo_server = "mistral.rpc.oslo.oslo_server:OsloRPCServer"

[project.entry-points."oslo.config.opts"]
"mistral.config" = "mistral.config:list_opts"

[project.entry-points."oslo.config.opts.defaults"]
"mistral.config" = "mistral.config:set_config_defaults"

[project.entry-points."oslo.policy.policies"]
mistral = "mistral.policies:list_rules"

[project.entry-points."oslo.policy.enforcer"]
mistral = "mistral.api.access_control:get_enforcer"

[project.entry-points."mistral.action.providers"]
legacy = "mistral.actions.legacy:LegacyActionProvider"
adhoc = "mistral.actions.adhoc:AdHocActionProvider"
dynamic = "mistral.actions.dynamic_action:DynamicActionProvider"

[project.entry-points."mistral.actions"]
"std.async_noop" = "mistral.actions.std_actions:AsyncNoOpAction"
"std.noop" = "mistral.actions.std_actions:NoOpAction"
"std.fail" = "mistral.actions.std_actions:FailAction"
"std.echo" = "mistral.actions.std_actions:EchoAction"
"std.http" = "mistral.actions.std_actions:HTTPAction"
"std.mistral_http" = "mistral.actions.std_actions:MistralHTTPAction"
"std.ssh" = "mistral.actions.std_actions:SSHAction"
"std.ssh_proxied" = "mistral.actions.std_actions:SSHProxiedAction"
"std.email" = "mistral.actions.std_actions:SendEmailAction"
"std.javascript" = "mistral.actions.std_actions:JavaScriptAction"
"std.js" = "mistral.actions.std_actions:JavaScriptAction"
"std.sleep" = "mistral.actions.std_actions:SleepAction"
"std.test_dict" = "mistral.actions.std_actions:TestDictAction"

[project.entry-points."mistral.executors"]
local = "mistral.executors.default_executor:DefaultExecutor"
remote = "mistral.executors.remote_executor:RemoteExecutor"

[project.entry-points."mistral.notifiers"]
local = "mistral.notifiers.default_notifier:DefaultNotifier"
remote = "mistral.notifiers.remote_notifier:RemoteNotifier"

[project.entry-points."mistral.notification.publishers"]
webhook = "mistral.notifiers.publishers.webhook:WebhookPublisher"
noop = "mistral.notifiers.publishers.noop:NoopPublisher"

[project.entry-points."mistral.expression.functions"]
env = "mistral.expressions.std_functions:env_"
execution = "mistral.expressions.std_functions:execution_"
executions = "mistral.expressions.std_functions:executions_"
global = "mistral.expressions.std_functions:global_"
json_parse = "mistral.expressions.std_functions:json_parse_"
json_dump = "mistral.expressions.std_functions:json_dump_"
task = "mistral.expressions.std_functions:task_"
tasks = "mistral.expressions.std_functions:tasks_"
uuid = "mistral.expressions.std_functions:uuid_"
yaml_parse = "mistral.expressions.std_functions:yaml_parse_"
yaml_dump = "mistral.expressions.std_functions:yaml_dump_"

[project.entry-points."mistral.expression.evaluators"]
yaql = "mistral.expressions.yaql_expression:InlineYAQLEvaluator"
jinja = "mistral.expressions.jinja_expression:InlineJinjaEvaluator"

[project.entry-points."mistral.auth"]
keystone = "mistral.auth.keystone:KeystoneAuthHandler"
keycloak-oidc = "mistral.auth.keycloak:KeycloakAuthHandler"

[project.entry-points."pygments.lexers"]
mistral = "mistral.ext.pygmentplugin:MistralLexer"

[project.entry-points."mistral.js.implementation"]
pyv8 = "mistral.utils.javascript:PyV8Evaluator"
v8eval = "mistral.utils.javascript:V8EvalEvaluator"
py_mini_racer = "mistral.utils.javascript:PyMiniRacerEvaluator"

[project.entry-points."mistral.schedulers"]
legacy = "mistral.services.legacy_scheduler:LegacyScheduler"
default = "mistral.scheduler.default_scheduler:DefaultScheduler"

[tool.setuptools]
packages = [
    "mistral"
]
