[metadata]
name = mistral
summary = Mistral Project
description_file =
    README.rst
license = Apache License, Version 2.0
home_page = https://docs.openstack.org/mistral/latest/
python_requires = >=3.8
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org

[files]
packages =
    mistral

[entry_points]
console_scripts =
    mistral-server = mistral.cmd.launch:main
    mistral-db-manage = mistral.db.sqlalchemy.migration.cli:main

mistral.rpc.backends =
    oslo_client = mistral.rpc.oslo.oslo_client:OsloRPCClient
    oslo_server = mistral.rpc.oslo.oslo_server:OsloRPCServer
    kombu_client = mistral.rpc.kombu.kombu_client:KombuRPCClient
    kombu_server = mistral.rpc.kombu.kombu_server:KombuRPCServer

oslo.config.opts =
    mistral.config = mistral.config:list_opts

oslo.config.opts.defaults =
    mistral.config = mistral.config:set_config_defaults

oslo.policy.policies =
    mistral = mistral.policies:list_rules

oslo.policy.enforcer =
    mistral = mistral.api.access_control:get_enforcer

mistral.action.providers =
    legacy = mistral.actions.legacy:LegacyActionProvider
    adhoc = mistral.actions.adhoc:AdHocActionProvider
    dynamic = mistral.actions.dynamic_action:DynamicActionProvider

mistral.actions =
    std.async_noop = mistral.actions.std_actions:AsyncNoOpAction
    std.noop = mistral.actions.std_actions:NoOpAction
    std.fail = mistral.actions.std_actions:FailAction
    std.echo = mistral.actions.std_actions:EchoAction
    std.http = mistral.actions.std_actions:HTTPAction
    std.mistral_http = mistral.actions.std_actions:MistralHTTPAction
    std.ssh = mistral.actions.std_actions:SSHAction
    std.ssh_proxied = mistral.actions.std_actions:SSHProxiedAction
    std.email = mistral.actions.std_actions:SendEmailAction
    std.javascript = mistral.actions.std_actions:JavaScriptAction
    std.js = mistral.actions.std_actions:JavaScriptAction
    std.sleep = mistral.actions.std_actions:SleepAction
    std.test_dict = mistral.actions.std_actions:TestDictAction

mistral.executors =
    local = mistral.executors.default_executor:DefaultExecutor
    remote = mistral.executors.remote_executor:RemoteExecutor

mistral.notifiers =
    local = mistral.notifiers.default_notifier:DefaultNotifier
    remote = mistral.notifiers.remote_notifier:RemoteNotifier

mistral.notification.publishers =
    webhook = mistral.notifiers.publishers.webhook:WebhookPublisher
    noop = mistral.notifiers.publishers.noop:NoopPublisher

mistral.expression.functions =
    # json_pp was deprecated in Queens and will be removed in the S cycle
    json_pp = mistral.expressions.std_functions:json_pp_

    env = mistral.expressions.std_functions:env_
    execution = mistral.expressions.std_functions:execution_
    executions = mistral.expressions.std_functions:executions_
    global = mistral.expressions.std_functions:global_
    json_parse = mistral.expressions.std_functions:json_parse_
    json_dump = mistral.expressions.std_functions:json_dump_
    task = mistral.expressions.std_functions:task_
    tasks = mistral.expressions.std_functions:tasks_
    uuid = mistral.expressions.std_functions:uuid_
    yaml_parse = mistral.expressions.std_functions:yaml_parse_
    yaml_dump = mistral.expressions.std_functions:yaml_dump_

mistral.expression.evaluators =
    yaql = mistral.expressions.yaql_expression:InlineYAQLEvaluator
    jinja = mistral.expressions.jinja_expression:InlineJinjaEvaluator

mistral.auth =
    keystone = mistral.auth.keystone:KeystoneAuthHandler
    keycloak-oidc = mistral.auth.keycloak:KeycloakAuthHandler

kombu_driver.executors =
    blocking = futurist:SynchronousExecutor
    threading = futurist:ThreadPoolExecutor
    eventlet = futurist:GreenThreadPoolExecutor

pygments.lexers =
    mistral = mistral.ext.pygmentplugin:MistralLexer

mistral.js.implementation =
    pyv8 = mistral.utils.javascript:PyV8Evaluator
    v8eval = mistral.utils.javascript:V8EvalEvaluator
    py_mini_racer = mistral.utils.javascript:PyMiniRacerEvaluator

mistral.schedulers =
    legacy = mistral.services.legacy_scheduler:LegacyScheduler
    default = mistral.scheduler.default_scheduler:DefaultScheduler
