[metadata]
name = demo-app
version = 0.01
summary = Demo-app from Mistral
description-file = README.rd
#license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-dev@lists.openstack.org

[files]
packages =
    demo_app

[nosetests]
cover-package = demo_app

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
