[metadata]
name = mistral_tests
summary = Test Custom Mistral Action
version = 5.2.5
description-file =
    README.md
classifiers =
    Programming Language :: Python :: 2.7
    Operating System :: POSIX :: Linux

[files]
packages =
    mistral_tests

[entry_points]

mistral.action_generators =
    test_nova = mistral_tests.actions.openstack.actions:NovaAction

mistral.actions =
    tests.auth = mistral_tests.auth:AuthAction
    tests.cat = mistral_tests.cat:CatAction
    tests.exit = mistral_tests.exit:ExitAction
