[metadata]
name = {{ cookiecutter.project_name }}
license = Apache 2.0
summary = {{ cookiecutter.summary }}
description-file =
    README.rst
long_description_content_type = text/x-rst
author = {{ cookiecutter.author }}
author-email = {{ cookiecutter.email }}
version = {{cookiecutter.version}}
classifier =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities

[options]
packages = 
    {{ cookiecutter.pkg_name }}

install_requires =
    mistral_lib>=1.2.0
    yaql>=1.1.3

[options.entry_points]
mistral.actions =
    test.my_action = {{cookiecutter.pkg_name}}.actions:MyAction

mistral.expression.functions =
    test.my_function = {{cookiecutter.pkg_name}}.expression_functions:my_function_

[wheel]
universal = 1

[tool:pytest]
filterwarnings =
    # Show any DeprecationWarnings once
    once::DeprecationWarning
